1、添加 Logo、启动页 2、编写 Node Tab、 3、编写 Topic Detail（Bug）

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ xcuserdata/
 *.moved-aside
 *.xccheckout
 *.xcscmblueprint
+*.generated.swift
 
 ## Obj-C/Swift specific
 *.hmap
@@ -31,6 +32,7 @@ xcuserdata/
 ## Playgrounds
 timeline.xctimeline
 playground.xcworkspace
+
 
 # Swift Package Manager
 #
