--- a/V2EX/Supporting Files/Info.plist
+++ b/V2EX/Supporting Files/Info.plist
@@ -25,6 +25,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>需要获得你的许可才能访问相机</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>需要获得你的许可才能访问相册</string>
 	<key>UILaunchStoryboardName</key>
