1. 适配横竖屏切换 2. 清除缓存 3. 每日奖励 4. 主题详情图片预览 5. 修复节点图片如果是静态资源无法加载图片

--- a/V2EX/Supporting Files/Info.plist
+++ b/V2EX/Supporting Files/Info.plist
@@ -18,6 +18,20 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>Fabric</key>
+	<dict>
+		<key>APIKey</key>
+		<string>33cd2af14c3e3eab3742353e1fb6e272b19ef683</string>
+		<key>Kits</key>
+		<array>
+			<dict>
+				<key>KitInfo</key>
+				<dict/>
+				<key>KitName</key>
+				<string>Crashlytics</string>
+			</dict>
+		</array>
+	</dict>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
