--- a/V2EX/Supporting Files/Info.plist
+++ b/V2EX/Supporting Files/Info.plist
@@ -51,6 +51,8 @@
 	</array>
 	<key>UIRequiresFullScreen</key>
 	<true/>
+	<key>UIStatusBarHidden</key>
+	<true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
