新增： 浏览外链时可以通过 Safari、Chrome 打开
修复:
1. 打开需要登录的沙盒节点错误提供有误
2. 切换夜间模式状态栏文字没有变白色
3. #iPhoneX 点击主题详情右上角的更多按钮， ShareSheet 底部取消按钮上移到安全区域
4. #iPhoneX 回复主题的输入框高度不对
5. 其他优化。。。

--- a/V2EX/Supporting Files/Info.plist
+++ b/V2EX/Supporting Files/Info.plist
@@ -19,7 +19,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>5</string>
+	<string>6</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
@@ -34,6 +34,8 @@
 			</dict>
 		</array>
 	</dict>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -68,5 +70,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>googlechrome</string>
+        <string>googlechromes</string>
+    </array>
 </dict>
 </plist>
