--- a/V2EX/Supporting Files/Info.plist
+++ b/V2EX/Supporting Files/Info.plist
@@ -19,7 +19,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0.2</string>
 	<key>CFBundleVersion</key>
-	<string>13</string>
+	<string>14</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
@@ -53,6 +53,8 @@
 	<string>需要获得你的许可才能访问相机</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>需要获得你的许可才能访问相册</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>需要获得你的许可才能存储图像</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
