--- a/V2EX/Supporting Files/Info.plist
+++ b/V2EX/Supporting Files/Info.plist
@@ -50,11 +50,11 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>需要获得你的许可才能访问相机</string>
+	<string>需要获得您的许可才能访问相机</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>需要获得你的许可才能存储图像</string>
+	<string>需要获得您的许可才能存储图像</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>需要获得你的许可才能访问相册</string>
+	<string>需要获得您的许可才能访问相册</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -64,7 +64,7 @@
 	<key>UIRequiresFullScreen</key>
 	<true/>
 	<key>UIStatusBarHidden</key>
-	<false/>
+	<true/>
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleLightContent</string>
 	<key>UISupportedInterfaceOrientations</key>
@@ -81,6 +81,6 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
+	<true/>
 </dict>
 </plist>
